fixed some issues due to the last release

--- a/conf/install.conf
+++ b/conf/install.conf
@@ -17,6 +17,7 @@ DEFAULT_RESOURCE=demoResc
 CRED_STORE_TYPE=os
 CRED_FILE_PATH=$B2SAFE_PACKAGE_DIR/conf/credentials
 SERVER_ID="irods://localhost:1247"
+
 #
 # epic credentials file usage parameters
 #
@@ -48,3 +49,7 @@ AUTHZ_ENABLED=true
 # check if message queue is enabled
 MSG_QUEUE_ENABLED=false
 #
+# added 4.2 put the rigth values
+SERVERAPIREG="irods://localhost:1247"
+SERVERAPIPUB="irods://localhost:1247"
+
